--- a/Pag3_home.html
+++ b/Pag3_home.html
@@ -100,12 +100,12 @@
                     </div>
                 </div>
             </div>
-            <!--<button class="button" onclick="window.location.href='https://www.google.com';">
+            <button class="button" onclick="window.location.href='https://drive.google.com/u/0/uc?id=1dfa-UHBLBYvUlBoELhvBZEi6G6k0c0ip&export=download';">
                 <span class="button_lg">
                     <span class="button_sl"></span>
                     <span class="button_text">Download CV</span>
                 </span>
-            </button>-->
+            </button>
         </div>
     </section>
 
