--- a/Pag3_home.html
+++ b/Pag3_home.html
@@ -36,7 +36,7 @@
                 <img src="" alt="">
             </div>
             <h1>Gabriel Felício</h1>
-            <h2>Engenheiro de Software</h2>
+            <h2>Estudante</h2>
             <div class="redes">
                 <a href="https://github.com/XaauuziN" target="_blank"><i class="fa-brands fa-github"></i></a>
                 <a href="https://www.linkedin.com/in/gabriellfelicio/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
