--- a/Pag3_home.html
+++ b/Pag3_home.html
@@ -50,12 +50,13 @@
     <section id="sobremim" class="sobremim">
         <div class="container-section">
             <h2>Sobre mim</h2>
-            <p><span>Olá, meu nome é Gabriel Lemes Felício.</span> <br>Português:
-
+            <p><span>Olá, meu nome é Gabriel Felício.</span> 
+<br>Português:
+<br>
 Sou uma pessoa incrivelmente dedicada e apaixonada pela área de tecnologia. Minha determinação é notável, pois nunca desisto dos meus sonhos, sempre buscando superar desafios e alcançar meus objetivos. Minha paixão pela tecnologia brilha em cada passo que dou, demonstrando meu comprometimento genuíno e minha vontade inabalável de explorar e dominar as maravilhas desse mundo em constante evolução. Meu entusiasmo e desejo de aprendizado são inspiradores, e meu compromisso em seguir meu caminho na área tecnológica é uma prova viva da minha dedicação incansável. Com minha mentalidade determinada e amor pela tecnologia, estou preparado para conquistar um futuro repleto de realizações excepcionais.
-
+<br>
 <br>English:
-
+<br>
 I am an incredibly dedicated person and passionate about technology. My determination is remarkable, as I never give up on my dreams, always seeking to overcome challenges and achieve my goals. My passion for technology shines through in every step I take, demonstrating my genuine commitment and unwavering drive to explore and master the wonders of this ever-evolving world. My enthusiasm and desire to learn are inspiring, and my commitment to following my path in technology is living proof of my tireless dedication. With my determined mindset and love of technology, I am poised for a future filled with exceptional accomplishments.</p>
             <div class="lista">
                 <!-- dados pessoais -->
