--- a/Pag3_home.html
+++ b/Pag3_home.html
@@ -95,10 +95,10 @@ I am an incredibly dedicated person and passionate about technology. My determin
                             <i class="fa-brands fa-js"></i>
                             <span>JavaScript</span>
                         </div>
-                        <!-- <div class="tecnologias">
-                            <i class="fa-brands fa-node"></i>
-                            <span>NodeJs</span>
-                        </div> -->
+                         <div class="tecnologias">
+                            <i class="fa-solid fa-database"></i>
+                            <span>MySQL</span>
+                        </div> 
                         
                         <div class="tecnologias">
                             <i class="fa-brands fa-python"></i>
