--- a/Pag3_home.html
+++ b/Pag3_home.html
@@ -105,6 +105,10 @@ I am an incredibly dedicated person and passionate about technology. My determin
                             <span>Python</span>
                         </div>
 
+                        <div class="tecnologias">
+                            <i class="fa-brands fa-java"></i>
+                            <span>Java</span>
+                        </div>
                     </div>
                 </div>
             </div>
