--- a/Pag1_login.html
+++ b/Pag1_login.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Portifolio</title>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css'>
-  <link rel='stylesheet' href='https://unicons.iconscout.com/release/v2.1.9/css/unicons.css'><link rel="stylesheet" href="Pag1_login.css">
-  <link rel="icon" type="png" href="img/login_icon.png">
-
+  <link rel='stylesheet' href='https://unicons.iconscout.com/release/v2.1.9/css/unicons.css'>
+  <link rel="stylesheet" href="Pag1_login.css">
+  <link rel="icon" type="image/png" href="img/login_icon.png">
 </head>
-<body>
-
 <body>
     <div class="secLion">
         <div class="container">
@@ -27,13 +25,13 @@
                                             <h4 class="mb-4 pb-3">Log In</h4>
                                             <div class="form-group">
                                                 <input type="email" name="logemail" class="form-style" placeholder="Your Email" id="logemail" autocomplete="off">
-                                                <i class="input-icon uil uil-at"></i>   
+                                                <i class="input-icon uil uil-at"></i>
                                             </div>
                                             <div class="form-group mt-2">
                                                 <input type="password" name="logpass" class="form-style" placeholder="Your Password" id="logpass" autocomplete="off">
                                                 <i class="input-icon uil uil-lock-alt"></i>
                                             </div>
-                                            <a href="Pag3_home.html" class="btn mt-4">Submit</a>
+                                            <a href="#" class="btn mt-4" id="login-submit">Submit</a>
                                             <p class="mb-0 mt-4 text-center"><a href="Pag2_forgotPW.html" class="link">Forgot Your Password?</a></p>
                                         </div>              
                                     </div>
@@ -47,14 +45,14 @@
                                                 <i class="input-icon uil uil-user"></i>
                                             </div>
                                             <div class="form-group mt-2">
-                                                <input type="email" name="logemail" class="form-style" placeholder="Your Email" id="logemail" autocomplete="off">
+                                                <input type="email" name="logemail-signup" class="form-style" placeholder="Your Email" id="logemail-signup" autocomplete="off">
                                                 <i class="input-icon uil uil-at"></i>
                                             </div>
                                             <div class="form-group mt-2">
-                                                <input type="password" name="logpass" class="form-style" placeholder="Your Password" id="logpass" autocomplete="off">
+                                                <input type="password" name="logpass-signup" class="form-style" placeholder="Your Password" id="logpass-signup" autocomplete="off">
                                                 <i class="input-icon uil uil-lock-alt"></i>
                                             </div>
-                                            <a href="Pag3_home.html" class="btn mt-4">Submit</a>
+                                            <a href="#" class="btn mt-4" id="signup-submit">Submit</a>
                                         </div>
                                     </div>
                                 </div>
@@ -65,10 +63,7 @@
             </div>
         </div>
     </div>
-</body>
-</html>
 
-  <script  src="login.js"></script>
-
+    <script src="login.js"></script>
 </body>
 </html>
