--- a/Home/Home.html
+++ b/Home/Home.html
@@ -35,7 +35,7 @@
     <section id="home" class="home">
         <div class="container-banner">
             <div class="container-img">
-                <img src="" alt="">
+            <img src="" alt="">    <!--    MINHA FOTO   -->
             </div>
             <h1>Gabriel Felício</h1>
             <h2>Student</h2>
