--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,8 +5,8 @@
   <title>Portifolio</title>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css'>
   <link rel='stylesheet' href='https://unicons.iconscout.com/release/v2.1.9/css/unicons.css'>
-  <link rel="stylesheet" href="../Login/Login.css">
-  <link rel="icon" type="image/png" href="../Imagens/login_icon.png">
+  <link rel="stylesheet" href="Login/Login.css">
+  <link rel="icon" type="image/png" href="Imagens/login_icon.png">
 </head>
 <body>
     <div class="secLion">
@@ -32,8 +31,8 @@
                                                 <input type="password" name="logpass" class="form-style" placeholder="Your Password" id="logpass" autocomplete="off">
                                                 <i class="input-icon uil uil-lock-alt"></i>
                                             </div>
-                                            <a href="Home.html" class="btn mt-4" id="login-submit">Submit</a>
-                                            <p class="mb-0 mt-4 text-center"><a href="Forgot.html" class="link">Forgot Your Password?</a></p>
+                                            <a href="Home/Home.html" class="btn mt-4" id="login-submit">Submit</a>
+                                            <p class="mb-0 mt-4 text-center"><a href="Login/Forgot.html" class="link">Forgot Your Password?</a></p>
                                         </div>              
                                     </div>
                                 </div>
@@ -53,7 +52,7 @@
                                                 <input type="password" name="logpass-signup" class="form-style" placeholder="Your Password" id="logpass-signup" autocomplete="off">
                                                 <i class="input-icon uil uil-lock-alt"></i>
                                             </div>
-                                            <a href="../Home/Home.html" class="btn mt-4" id="signup-submit">Submit</a>
+                                            <a href="Home/Home.html" class="btn mt-4" id="signup-submit">Submit</a>
                                         </div>
                                     </div>
                                 </div>
@@ -65,7 +64,6 @@
         </div>
     </div>
 
-    <script src="login.js"></script>
+    <script src="Login/Login.js"></script>
 </body>
 </html>
-
