--- a/Login/Login.html
+++ b/Login/Login.html
@@ -31,7 +31,7 @@
                                                 <input type="password" name="logpass" class="form-style" placeholder="Your Password" id="logpass" autocomplete="off">
                                                 <i class="input-icon uil uil-lock-alt"></i>
                                             </div>
-                                            <a href="Home.html" class="btn mt-4" id="login-submit">Submit</a>
+                                            <a href="../Home/Home.html" class="btn mt-4" id="login-submit">Submit</a>
                                             <p class="mb-0 mt-4 text-center"><a href="Forgot.html" class="link">Forgot Your Password?</a></p>
                                         </div>              
                                     </div>
