--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                                                 <input type="password" name="logpass-signup" class="form-style" placeholder="Your Password" id="logpass-signup" autocomplete="off">
                                                 <i class="input-icon uil uil-lock-alt"></i>
                                             </div>
-                                            <a href="Home/Home.html" class="btn mt-4" id="signup-submit">Submit</a>
+                                            <a href="..Home/Home.html" class="btn mt-4" id="signup-submit">Submit</a>
                                         </div>
                                     </div>
                                 </div>
