--- a/Login/Forgot.html
+++ b/Login/Forgot.html
@@ -36,7 +36,7 @@
                                                 <i class="input-icon uil uil-lock-alt"></i>
                                             </div>
                                             <a href="../Home/Home.html" id="signup-submit" class="btn mt-4">Submit</a>
-                                            <p class="mb-0 mt-4 text-center">Already have an account?   <a href="Login.html" class="link">Log In ></a></p>
+                                            <p class="mb-0 mt-4 text-center">Already have an account?   <a href="index.html" class="link">Log In ></a></p>
                                         </div>              
                                     </div>
                                 </div>
